# mea_editor

./: .gitignore  LICENSE  MEA_RdLGN64.json  MEA_RdLGN64test.json  README.md  pyproject.toml  requirement.txt  requirements.txt  run.py
.github/workflows/: publish-pypi.yml  publish_pypi.yml
MEA Editor Python Files/: build_exe.py  electrode_matrix_dialogs.py  electrode_matrix_editor_qt.py  electrode_matrix_io.py  electrode_matrix_types.py
mea_editor/: __init__.py  build_exe.py  electrode.py  electrode_array_dialogs.py  electrode_array_editor_io.py  electrode_array_editor_qt.py  electrode_array_io.py  electrode_array_types.py  electrode_array_view.py  electrode_view.py  grid_scene.py  run_mea_editor.py
run_mea_editor/: build_exe.py  run_mea_editor.py
